image overflow issue corrected in sections

--- a/assets/scss/layout/_section.scss
+++ b/assets/scss/layout/_section.scss
@@ -25,12 +25,20 @@
     //overflow: hidden;
 }
 
-.img-editor {
-    //border: 1px solid red;
+.image-wrap{
+    width: 100%;
+    height: 350px;
     margin-top: 7.8rem;
     margin-bottom: 4rem;
+}
+.img-editor {
+    //border: 1px solid red;
+    
     width: 100%;
-    transform: scale(1.25);
+    height: 100%;
+    object-fit: cover;
+    // transform: scale(1.25);
+
 }
 
 .text-block {
@@ -59,11 +67,9 @@
 }
 
 .img-laptop {
-    //border: 1px solid red;
-    margin-top: 7.8rem;
-    margin-bottom: 6rem;
     width: 100%;
-    transform: scale(1.52);
+    height: 100%;
+    object-fit: cover;
 }
 
 .empty {
@@ -77,7 +83,7 @@
     position: absolute;
     top: 0;
     left: -8px;
-    width: 383px;
+    width: 100%;
     margin-top: 7.8rem;
 }
 
